--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon  server.js"
+    "start": "node server.js",
+    "start-server":"npm  start",
+    "dev":"npm run start"
   },
   "keywords": [],
   "author": "",
